--- a/src/Weather.css
+++ b/src/Weather.css
@@ -1,12 +1,12 @@
 .card {
   max-width: 500px;
-  height: 90vh !important;
+  height: 800 !important;
   border: none !important;
   border-radius: 10px !important;
   margin: 0 auto !important;
   box-shadow: 5px 4px 10px rgba(0, 0, 0, 0.2);
   background-repeat: no-repeat;
-  background-size: cover;
+  background-size: 500px;
 }
 
 .morning {
@@ -133,4 +133,134 @@ li {
 
 .loading {
   color: black;
+}
+
+@media only screen and (max-width: 400px) {
+  .card {
+    height: 600 !important;
+    max-width: 400px;
+    border-radius: 10px !important;
+    margin: 0 auto !important;
+    box-shadow: 5px 4px 10px rgba(0, 0, 0, 0.2);
+    background-size: 400px;
+  }
+
+  .card-title {
+    font-size: 12px;
+  }
+
+  form {
+    margin-top: 15px;
+    margin-bottom: 25px;
+  }
+  .form-control {
+    max-width: 200px;
+
+    border-radius: 5px 0px 0px 5px !important;
+  }
+
+  .btn-primary {
+    border-radius: 0px 5px 5px 0px !important;
+  }
+
+  .current-date {
+    text-align: center;
+    font-weight: 300;
+    font-size: 18px;
+  }
+
+  .city {
+    text-align: center;
+    font-size: 25px;
+    line-height: 0.8;
+  }
+
+  .temperature-container {
+    padding-top: 10px;
+  }
+
+  .temperature {
+    position: relative;
+    line-height: 1;
+    font-size: 35px;
+  }
+  .unit.celcius {
+    font-size: 12px;
+    position: relative;
+    bottom: 17px;
+    padding-left: 8px;
+  }
+
+  .unit.celcius.active {
+    font-size: 18px;
+    position: relative;
+    bottom: 12px;
+  }
+  .unit.farenheit {
+    font-size: 12px;
+    position: relative;
+    right: 16px;
+    top: 2px;
+  }
+  .unit.farenheit.active {
+    position: relative;
+    font-size: 18px;
+    right: 13px;
+    top: 2px;
+  }
+
+  .weather-icon {
+    display: block;
+    margin-left: 20px;
+    padding: 0;
+  }
+
+  canvas {
+    width: 50px;
+    height: 50px;
+  }
+
+  .weather-description {
+    padding-top: 10px;
+    text-align: left;
+    padding-left: 20px;
+  }
+
+  ul {
+    padding-top: 10px;
+    padding-left: 20px;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  .card {
+    height: 800 !important;
+    max-width: 600px;
+    border-radius: 10px !important;
+    margin: 0 auto !important;
+    box-shadow: 5px 4px 10px rgba(0, 0, 0, 0.2);
+    background-size: 400px;
+  }
+
+  .weather-icon {
+    display: block;
+    margin-left: 20px;
+    padding: 0;
+  }
+
+  canvas {
+    width: 50px;
+    height: 50px;
+  }
+
+  .weather-description {
+    padding-top: 10px;
+    text-align: left;
+    padding-left: 20px;
+  }
+
+  ul {
+    padding-top: 10px;
+    padding-left: 20px;
+  }
 }
